# agvmon

./: .gitignore  README.md  build_nuitka.py  dataparse.py  main.py  pyproject.toml  req.txt  test_zmq.py
.claude/: settings.local.json
backend/: app.py
backend/api/: agvssh.py  exception_log.py  gossip.py  log_parser.py  other.py  rcmsapi.py  rcswebapi.py  redis_client.py  startup.py  static_routes.py  wcsapi.py  websocket.py
static/: szgotop.css
util/: __version__.py  agv_protocol_parser.py  agvlog.py  clean.py  config.py  config.toml  dataparse.py  dmdecoder.py  gossip.py  helper.py  logger.py  parse_wcs_log.py  rabbitmq.py  rcms_api.py  rcs_web_api.py  showrobot.py  ssh.py  test_svg_export.py  test_xml2json.py  wcs.py  xml2json.py  yuv2png.py  zeromq.py
util/data/: 1.json  1.xml  172.18.2.72-20260110T032944-163.xml  172.18.2.75-20260103T234101-772.xml  2.json  2.xml  3.json  3.xml  Alarminfo.json  AmrStatusInfo.json  Insomnia_2026-01-11.yaml  map_data.json  robot_config.xml
util/data/fake/: findDeviceListByElcMapCode.xml  findMapListByRcsCode.xml  find_alarm_typ_list.xml  find_all_rcs_list.xml  find_display_biz_ele_type.xml  getMapDataInfo.xml  getShareMapInfoByMapCode.json  get_rabbit_mq_param.xml
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  main.js
web/src/components/: FileManagementComponent.vue  FileSelectorComponent.vue  GossipNotifToast.vue  ImageDecodeComponent.vue  MapComponent.vue  TaskDisplayComponent.vue  WCSDeviceGrid.vue  pathshow.vue  redis.vue  ssh.vue
(+49 files in other folders)
