[project]
name = "agvmon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "pillow>=12.1.0",
    "pyzmq>=27.1.0",
    "redis",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
    "xmltodict>=1.0.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
]

[tool.nuitka]
# Nuitka配置选项
standalone = true
include-package = [
    "backend",
    "backend.api",
    "util",
]
include-data-files = [
    { dest="config.toml", package="util", src="config.toml" },
]
include-data-dir = [
    { dest="web", src="web" },
]
follow-import-to = [
    "backend",
    "backend.api", 
    "util",
]
output-dir = "dist"
remove-output = true
windows-console-mode = "attach"

[project.scripts]
agvmon = "main:main"